# kTemplate

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.ipynb  index.html  mkdocs.yml  objects.inv  publish.sh  pump.py  pyproject.toml  readme.bak.md  run-test.sh  version_pump.py
.github/workflows/: ci.yml  main.yml  pytest.yml
assets/: coverage-report.xml
assets/coverage/: d_d643e4e6b73f6672___init___py.html  index.html  pump_py.html  version_pump_py.html
changelog/: index.html
contribute/: index.html
docs/: reference.md  usage.md  why.md
docs/assets/: coverage-report.xml
docs/assets/coverage/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_main_py.html  d_d643e4e6b73f6672___init___py.html  d_d643e4e6b73f6672_elements_py.html  d_d643e4e6b73f6672_main_py.html  index.html  publish_py.html  status.json
docs/stylesheets/: extra.css
kTemplate/: __init__.py  elements.py  main.py
license/: index.html
reference/: index.html
search/: search_index.json
tests/: test_main.py
usage/: index.html
