[tool.poetry]
name = "kTemplate"
version = "0.1.0"
description = "a minimalist python html template lib"
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hoishing/kTemplate"
keywords = ["template", "html", "jinja"]
classifiers = [
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Intended Audience :: Developers",
  "Framework :: Flask",
  "Framework :: FastAPI",
  "Development Status :: 4 - Beta",
]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mkdocstrings = "^0.19.1"
mkdocs-material = "^9.0.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
